--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "src/app.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "seed": "node src/utils/populate.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
